<resources>
    <string name="app_name">LearnViewModel</string>
    <string name="hi_julius">Hi, Julius</string>
    <string name="quick_operation">Quick Operation</string>
    <string name="active">Active</string>
    <string name="customer_tier_1">Customer Tier 1</string>
    <string name="n">N*********.***</string>
    <string name="_2133300901">2133300901</string>
    <string name="julius_olamide">JULIUS OLAMIDE</string>
    <string name="nip_dr_opa_mayowa">NIP DR/OPA/MAYOWA</string>
    <string name="ngn5_000_00">-NGN5,000.00</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>