<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeFragment">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/epawo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:src="@drawable/epawo2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profilebackground"
        android:layout_width="350dp"
        android:layout_height="90dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/layout_orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/epawo">

        <TextView
            android:id="@+id/username"
            android:layout_width="76dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="200dp"
            android:text="@string/hi_julius"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/julius"
            app:layout_constraintEnd_toStartOf="@id/username"
            app:layout_constraintTop_toTopOf="@+id/username"
            tools:layout_editor_absoluteX="16dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/background2"
        android:layout_width="320dp"
        android:layout_height="143dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/layout_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilebackground">

        <ImageView
            android:id="@+id/activegreen"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:src="@drawable/active"
            app:layout_constraintEnd_toStartOf="@+id/Active"
            app:layout_constraintTop_toTopOf="@+id/Active"
            tools:layout_editor_absoluteX="235dp"
            tools:layout_editor_absoluteY="24dp" />

        <TextView
            android:id="@+id/Active"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:text="@string/active"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/background2"
            app:layout_constraintTop_toTopOf="@+id/background2" />

        <TextView
            android:id="@+id/customerTier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="92dp"
            android:text="@string/customer_tier_1"
            app:layout_constraintEnd_toEndOf="@+id/background2"
            app:layout_constraintTop_toTopOf="@+id/background2" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="125dp"
            android:layout_height="17dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:text="@string/julius_olamide"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/background2"
            app:layout_constraintTop_toTopOf="@+id/background2" />

        <TextView
            android:id="@+id/ngn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/n"
            app:layout_constraintEnd_toEndOf="@+id/background2"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="@+id/background2"
            app:layout_constraintTop_toBottomOf="@+id/customerTier" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="102dp"
            android:layout_height="19dp"
            android:layout_marginTop="88dp"
            android:background="@drawable/layout_orange"
            app:layout_constraintEnd_toEndOf="@+id/background2"
            app:layout_constraintHorizontal_bias="0.073"
            app:layout_constraintStart_toStartOf="@+id/background2"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <TextView
                android:layout_width="81dp"
                android:layout_height="16dp"
                android:text="@string/_2133300901"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/QuickOperation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:text="@string/quick_operation"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/background2"
        app:layout_constraintTop_toBottomOf="@+id/background2" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="69dp"
        android:layout_height="70dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/layout_white"
        app:layout_constraintEnd_toStartOf="@+id/arrowbackground"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cardwavebackground"
        app:layout_constraintTop_toBottomOf="@+id/QuickOperation">

        <ImageView
            android:id="@+id/arrow"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:src="@drawable/arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/phonewavebackground"
        android:layout_width="69dp"
        android:layout_height="70dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/layout_white"
        app:layout_constraintEnd_toEndOf="@+id/profilebackground"
        app:layout_constraintTop_toBottomOf="@+id/background2">

        <ImageView
            android:id="@+id/phonewave"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:src="@drawable/phonewave"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="6dp"
            tools:layout_editor_absoluteY="7dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardwavebackground"
        android:layout_width="69dp"
        android:layout_height="70dp"
        android:layout_marginStart="24dp"
        android:background="@drawable/layout_white"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout4"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/cashout"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:src="@drawable/cashout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/arrowbackground"
        android:layout_width="69dp"
        android:layout_height="70dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/layout_white"
        app:layout_constraintEnd_toStartOf="@+id/phonewavebackground"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout4"
        app:layout_constraintTop_toBottomOf="@+id/background2">

        <ImageView
            android:layout_width="66dp"
            android:layout_height="50dp"
            android:src="@drawable/cardwave"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/TextCahout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="Cash Out"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/TextTransfer"
        app:layout_constraintEnd_toStartOf="@+id/TextTransfer"
        app:layout_constraintTop_toTopOf="@+id/TextTransfer"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/TextTransfer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="36dp"
        android:text="Transfer"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/TextPayBills"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout4" />

    <TextView
        android:id="@+id/TextPayBills"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:text="Pay Bills"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/TextPhonewave"
        app:layout_constraintEnd_toStartOf="@+id/TextPhonewave"
        app:layout_constraintTop_toTopOf="@+id/TextPhonewave"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/TextPhonewave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="36dp"
        android:text="Airtime"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phonewavebackground"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/whitebackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/layout_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/phonewavebackground"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/cardwavebackground"
        app:layout_constraintTop_toBottomOf="@+id/TextTransfer"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/RecentTransaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="60dp"
            android:text="Recent Transactions"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/TransactionHistory"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/TransactionHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:text="TransactionHistory"
            android:textColor="@color/orange"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:padding="8dp"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.481"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/RecentTransaction"
            app:layout_constraintVertical_bias="0.837" />


    </androidx.constraintlayout.widget.ConstraintLayout>



    <!--<FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>-->


    <!--<com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="0dp"
        android:layout_height="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/whitebackground"
        app:layout_constraintStart_toStartOf="@+id/whitebackground"
        app:menu="@menu/button_nav" />-->

</androidx.constraintlayout.widget.ConstraintLayout>